# py-frameworks-go

./: .gitignore  README.md  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  test_api.py
src/household_manager/: database.py  main.py
src/household_manager/api/: auth.py  inventory.py  recipe.py
src/household_manager/core/: deps.py  security.py
src/household_manager/models/: inventory.py  recipe.py  user.py
src/household_manager/schemas/: auth.py  inventory.py  recipe.py
tests/: test_api.py  test_recipe.py
