[project]
name = "py-frameworks-go"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "psycopg[binary]>=3.3.4",
    "requests>=2.34.2",
    "ruff>=0.15.14",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-utils>=0.42.1",
    "ty>=0.0.38",
    "uvicorn>=0.47.0",
]
