[project]
name = "household-manager"
version = "0.1.0"
description = "A household inventory and recipe manager"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "psycopg[binary]>=3.3.4",
    "requests>=2.34.2",
    "ruff>=0.15.14",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-utils>=0.42.1",
    "ty>=0.0.38",
    "uvicorn>=0.47.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/household_manager"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
